Add Norwegian translations for search box and scroll functionality

--- a/public/locales/en/global.json
+++ b/public/locales/en/global.json
@@ -3,5 +3,7 @@
   "press a letter to jump to the group": "Press a letter to jump to the group",
   "what are you looking for?": "What are you looking for?",
   "this group has no verb!": "This group has no verb!",
-  "group": "Group"
+  "group": "Group",
+  "clear search box": "Clear search box",
+  "scroll to top": "Scroll to top",
 }
