--- a/public/locales/no/global.json
+++ b/public/locales/no/global.json
@@ -3,5 +3,7 @@
     "press a letter to jump to the group": "Trykk på et alfabet for å hoppe til gruppen",
     "what are you looking for?": "Hva leter du etter?",
     "This group has no verb!": "Denne gruppen har ingen verb!",
-    "group": "Gruppe"
+    "group": "Gruppe",
+    "clear search box": "Tøm søkeboksen",
+    "scroll to top": "Rull til toppen"
 }
