Add Language type

--- a/public/locales/en/global.json
+++ b/public/locales/en/global.json
@@ -5,5 +5,5 @@
   "this group has no verb!": "This group has no verb!",
   "group": "Group",
   "clear search box": "Clear search box",
-  "scroll to top": "Scroll to top",
+  "scroll to top": "Scroll to top"
 }
